kube/app/mealie/mealie.yml
# https://hub.docker.com/r/hkotel/mealie
# https://hay-kot.github.io/mealie/documentation/getting-started/install/
# https://nightly.mealie.io/documentation/getting-started/installation/backend-config/
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
    app.kubernetes.io/version: v1.0.0-RC1.1
spec:
  progressDeadlineSeconds: 300
  replicas: 1
  revisionHistoryLimit: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/name: mealie
  template:
    metadata:
      annotations:
        fluentbit.io/parser: "mealie"
      labels:
        app.kubernetes.io/name: mealie
    spec:
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie:v1.0.0-RC1.1
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: 128Mi
            limits:
              memory: 1Gi
          ports:
            - containerPort: 80
              name: http-tcp
              protocol: TCP
          volumeMounts:
            - mountPath: /app/data
              name: mealie-data
      volumes:
        - name: mealie-data
          persistentVolumeClaim:
            claimName: mealie-data
