kube/app/mealie/network.yml
---
apiVersion: v1
kind: Service
metadata:
  name: mealie-lan
  namespace: mealie
  annotations:
    metallb.io/loadBalancerIPs: "192.168.1.226"
  labels:
    app.kubernetes.io/name: mealie
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  selector:
    app.kubernetes.io/name: mealie
  ports:
  - port: 80
    name: http-tcp
    protocol: TCP
---
kind: Service
apiVersion: v1
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
spec:
  selector:
    app.kubernetes.io/name: mealie
  ports:
  - port: 80
    name: http-tcp
    protocol: TCP
  type: ClusterIP
  sessionAffinity: ClientIP # multipod deployments: route traffic to the same pod based on ip address
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mealie
  namespace: mealie
  labels:
    app.kubernetes.io/name: mealie
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/proxy-body-size: 20m
spec:
  ingressClassName: nginx-internal
  tls:
  - hosts:
    - cook.matthew-stratton.me
    secretName: mealie-tls
  rules:
  - host: cook.matthew-stratton.me
    http:
      paths:
      - backend:
          service:
            name: mealie
            port:
              number: 80
        path: /
        pathType: Prefix
